Contrast Issues #2

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -66,6 +66,7 @@ header nav a {
     padding: 1rem 4rem;
     text-align: center;
     background-color: var(--accent-1-color);
+    font-weight: bolder;
 }
 
 p, nav a {
@@ -112,7 +113,7 @@ p, nav a {
 .hero article p {
     padding: 15px;
     clear: none;
-    color: var(--white-tone);
+    color: var(--dark-tone);
 }
 
 .hero article img {
